internet_gateway.tf
# Create a new security group for the instances
resource "aws_security_group" "instance_sg1" {
  name   = "instance_sg1"
  vpc_id = aws_vpc.custom.id

  # SSH access from anywhere
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
